--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
