--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.0.3",
     "@ckeditor/ckeditor5-react": "^6.2.0",
     "antd": "^5.15.2",
     "axios": "^1.6.7",
