--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.3",
     "react-router-dom": "^6.22.3",
     "slugify": "^1.6.6",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
     "xlsx": "^0.18.5"
   },
