--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
+    "reselect": "^5.1.0",
     "slugify": "^1.6.6",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.8",
